--- a/content/404.md
+++ b/content/404.md
@@ -4,7 +4,7 @@ eleventyExcludeFromCollections: true
 ---
 # Content not found.
 
-Go <a href="index.njk">home</a>.
+OOPS! that page isn't here. Go <a href="index.njk">home</a>.
 
 <!--
 
